Refactoring : Make use of method references