@@ -2,7 +2,6 @@ package com.harcyah.kata.exercism.binary_search_tree;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -13,30 +12,30 @@ class BinarySearchTreeTest {
     @Test
     void dataIsRetained() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        final int actual = 4;
+        int actual = 4;
         sut.insert(actual);
-        final BinarySearchTree.Node<Integer> root = sut.getRoot();
+        BinarySearchTree.Node<Integer> root = sut.getRoot();
         assertNotNull(root);
-        final int expected = root.getData();
+        int expected = root.getData();
         assertEquals(expected, actual);
     }
 
     @Test
     void insertsLess() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        final int expectedRoot = 4;
-        final int expectedLeft = 2;
+        int expectedRoot = 4;
+        int expectedLeft = 2;
 
         sut.insert(expectedRoot);
         sut.insert(expectedLeft);
 
-        final BinarySearchTree.Node<Integer> root = sut.getRoot();
+        BinarySearchTree.Node<Integer> root = sut.getRoot();
         assertNotNull(root);
-        final BinarySearchTree.Node<Integer> left = root.getLeft();
+        BinarySearchTree.Node<Integer> left = root.getLeft();
         assertNotNull(left);
 
-        final int actualRoot = root.getData();
-        final int actualLeft = left.getData();
+        int actualRoot = root.getData();
+        int actualLeft = left.getData();
         assertEquals(expectedLeft, actualLeft);
         assertEquals(expectedRoot, actualRoot);
     }
@@ -44,19 +43,19 @@ class BinarySearchTreeTest {
     @Test
     void insertsSame() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        final int expectedRoot = 4;
-        final int expectedLeft = 4;
+        int expectedRoot = 4;
+        int expectedLeft = 4;
 
         sut.insert(expectedRoot);
         sut.insert(expectedLeft);
 
-        final BinarySearchTree.Node<Integer> root = sut.getRoot();
+        BinarySearchTree.Node<Integer> root = sut.getRoot();
         assertNotNull(root);
-        final BinarySearchTree.Node<Integer> left = root.getLeft();
+        BinarySearchTree.Node<Integer> left = root.getLeft();
         assertNotNull(left);
 
-        final int actualRoot = root.getData();
-        final int actualLeft = left.getData();
+        int actualRoot = root.getData();
+        int actualLeft = left.getData();
         assertEquals(expectedLeft, actualLeft);
         assertEquals(expectedRoot, actualRoot);
     }
@@ -64,19 +63,19 @@ class BinarySearchTreeTest {
     @Test
     void insertsRight() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        final int expectedRoot = 4;
-        final int expectedRight = 5;
+        int expectedRoot = 4;
+        int expectedRight = 5;
 
         sut.insert(expectedRoot);
         sut.insert(expectedRight);
 
-        final BinarySearchTree.Node<Integer> root = sut.getRoot();
+        BinarySearchTree.Node<Integer> root = sut.getRoot();
         assertNotNull(root);
-        final BinarySearchTree.Node<Integer> right = root.getRight();
+        BinarySearchTree.Node<Integer> right = root.getRight();
         assertNotNull(right);
 
-        final int actualRoot = root.getData();
-        final int actualRight = right.getData();
+        int actualRoot = root.getData();
+        int actualRight = right.getData();
         assertEquals(expectedRight, actualRight);
         assertEquals(expectedRoot, actualRoot);
     }
@@ -84,12 +83,10 @@ class BinarySearchTreeTest {
     @Test
     void createsComplexTree() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        List<Integer> expected = Collections.unmodifiableList(
-            List.of(4, 2, 6, 1, 3, 5, 7));
+        List<Integer> expected = List.of(4, 2, 6, 1, 3, 5, 7);
 
-        List<Integer> treeData = Collections.unmodifiableList(
-            List.of(4, 2, 6, 1, 3, 7, 5));
-        treeData.forEach(value -> sut.insert(value));
+        List<Integer> treeData = List.of(4, 2, 6, 1, 3, 7, 5);
+        treeData.forEach(sut::insert);
 
         List<Integer> actual = sut.getAsLevelOrderList();
         assertEquals(expected, actual);
@@ -98,8 +95,7 @@ class BinarySearchTreeTest {
     @Test
     void sortsSingleElement() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        List<Integer> expected = Collections.unmodifiableList(
-            List.of(4));
+        List<Integer> expected = List.of(4);
 
         sut.insert(4);
 
@@ -110,8 +106,7 @@ class BinarySearchTreeTest {
     @Test
     void sortsCollectionOfTwoIfSecondInsertedIsSmallerThanFirst() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        List<Integer> expected = Collections.unmodifiableList(
-            List.of(2, 4));
+        List<Integer> expected = List.of(2, 4);
 
         sut.insert(4);
         sut.insert(2);
@@ -123,8 +118,7 @@ class BinarySearchTreeTest {
     @Test
     void sortsCollectionOfTwoIfSecondInsertedIsBiggerThanFirst() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        List<Integer> expected = Collections.unmodifiableList(
-            List.of(4, 5));
+        List<Integer> expected = List.of(4, 5);
 
         sut.insert(4);
         sut.insert(5);
@@ -136,12 +130,10 @@ class BinarySearchTreeTest {
     @Test
     void iteratesOverComplexTree() {
         BinarySearchTree<Integer> sut = new BinarySearchTree<>();
-        List<Integer> expected = Collections.unmodifiableList(
-            List.of(1, 2, 3, 4, 5, 6, 7));
+        List<Integer> expected = List.of(1, 2, 3, 4, 5, 6, 7);
 
-        List<Integer> treeData = Collections.unmodifiableList(
-            List.of(4, 2, 1, 3, 6, 7, 5));
-        treeData.forEach(value -> sut.insert(value));
+        List<Integer> treeData = List.of(4, 2, 1, 3, 6, 7, 5);
+        treeData.forEach(sut::insert);
 
         List<Integer> actual = sut.getAsSortedList();
         assertEquals(expected, actual);
